--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
     <version>3.1.2.RELEASE</version>
 	</dependency>
 		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itext7-core</artifactId>
+			<version>7.2.5</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.13.1</version>
